--- a/ecotrack/requirements.txt
+++ b/ecotrack/requirements.txt
@@ -4,6 +4,7 @@ django-environ==0.12.0
 django-filter==25.1  
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0 
+drf-yasg==1.21.9
 pillow==11.1.0
 psycopg2==2.9.10
 python-dotenv==1.0.1
